--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "geometry-genius-resources",
+  "name": "lawyer_portfolio_f2h",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-tailwind": "npx tailwindcss -i ./assets/src/input.css -o ./assets/tail_output/output.css --watch"
+    "build": "npm-run-all --parallel sass postcss tailwind",
+    "sass": "sass assets/scss/style.scss assets/styles/style.css --watch --style compressed",
+    "postcss": "postcss assets/styles/style.css -o assets/styles/style.css --watch",
+    "tailwind": "npx tailwindcss -i ./assets/src/input.css -o ./assets/tail_output/output.css --watch"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.3.6"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.28",
+    "postcss-cli": "^10.1.0",
+    "postcss-preset-env": "^9.1.1",
+    "sass": "^1.66.1"
   }
 }
